# build-llm-from-scratch-book

./: .gitignore  cross-entropy-pytorch.ipynb  pyproject.toml
ch03/: __init__.py  ex_3_3_multihead_attention.py
ch04/: ex_4_1_params_count.py  ex_4_2_more_llm_params_count.py  ex_4_3_drop_rate.py
ch05/: ex_5_1_sampled_tokens.py  ex_5_2_ktop_temperature.py  ex_5_4_save_load_weight.py  ex_5_5_gpt_loss_verdict_text.py  ex_5_6_gpt_compare.py  gpt_start_download.py
