[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "build-llm"
version = "0.1.0"

dependencies = [
    "torch>=2.12.0",
    "tiktoken>=0.13.0",
    "tensorflow>=2.21.0",
    "tqdm>=4.68.2",
]

[tool.setuptools]
packages = ["ch03", "ch04", "ch05"]
